fix(frontend): make summary block take up the entire width of the page
By default, `summary` tag will only take up as much room as there is on
screen. This mean on IOS, the description gets squished, until it is
expanded.

--- a/frontend/src/routes/meetups/index.css
+++ b/frontend/src/routes/meetups/index.css
@@ -3,3 +3,11 @@ th,
 td {
    vertical-align: top;
 }
+
+table {
+   min-width: max-content;
+}
+
+summary {
+   min-width: max-content;
+}
